objects/Adjustment_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Category__c</fullName>
        <description>The category of the adjustment. Example: Medical, Dental, Vision etc</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The category of the adjustment. Example: Medical, Dental, Vision etc</inlineHelpText>
        <label>Adjustment Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that indicates this record was auto generated as opposed to user generated.</description>
        <inlineHelpText>A flag that indicates this record was auto generated as opposed to user generated.</inlineHelpText>
        <label>Auto Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to a parent benefit design.  This may be null if the records belong to a benefit request form.</description>
        <inlineHelpText>A reference to a parent benefit design.  This may be null if the records belong to a benefit request form.</inlineHelpText>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>Adjustment Summaries</relationshipLabel>
        <relationshipName>Adjustment_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to a parent benefit design.  This may be null if the records belong to a benefit design form.</description>
        <inlineHelpText>A reference to a parent benefit design.  This may be null if the records belong to a benefit design form.</inlineHelpText>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Adjustment Summaries</relationshipLabel>
        <relationshipName>Adjustment_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changed_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that made the change.</description>
        <inlineHelpText>The user that made the change.</inlineHelpText>
        <label>Changed by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Adjustment_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime_of_Change__c</fullName>
        <description>The date/time of the change.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date/time of the change.</inlineHelpText>
        <label>DateTime of Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Affected__c</fullName>
        <description>The field that was affected.  This may also be used to indicate a New or Deleted item.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The field that was affected.  This may also be used to indicate a New or Deleted item.</inlineHelpText>
        <label>Field Affected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Changed__c</fullName>
        <description>The name of the item that was changed.  This could be a form, benefit, limitation etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the item that was changed.  This could be a form, benefit, limitation etc.</inlineHelpText>
        <label>Form Changed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>The new value of the field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The new value of the field.</inlineHelpText>
        <label>New Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <description>The previous value of the field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The previous value of the field.</inlineHelpText>
        <label>Previous Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordType_Drawloop__c</fullName>
        <formula>IF(NOT(ISBLANK(Benefit_Request_Form__c)),'BRF','BD')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Drawloop</label>
        <type>Text</type>
    </fields>
    <description>A list of summarized changes to the associated records.  These records will be generated when a BRF is Sold or a BD is approved.</description>
    <label>Adjustment Summary</label>
    <nameField>
        <displayFormat>AN-{00000}</displayFormat>
        <label>Adjustment Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>